--- a/fully-convolutional-change-detection.ipynb
+++ b/fully-convolutional-change-detection.ipynb
@@ -30,20 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:45:52.259360Z",
+     "start_time": "2024-12-11T16:45:52.257204Z"
+    }
+   },
    "source": [
     "# Rodrigo Daudt\n",
     "# rcdaudt.github.io\n",
     "# rodrigo.daudt@onera.fr"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:45:52.303872Z",
+     "start_time": "2024-12-11T16:45:52.297349Z"
+    }
+   },
    "source": [
     "# Imports\n",
     "\n",
@@ -81,24 +89,42 @@
     "\n",
     "\n",
     "print('IMPORTS OK')\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMPORTS OK\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:45:52.357987Z",
+     "start_time": "2024-12-11T16:45:52.356203Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:51:20.712067Z",
+     "start_time": "2024-12-11T16:51:20.708959Z"
+    }
+   },
    "source": [
     "# Global Variables' Definitions\n",
     "\n",
-    "PATH_TO_DATASET = './OSCD/'\n",
+    "PATH_TO_DATASET = '/home/phil/datasets/Onera/Onera Satellite Change Detection dataset - Train Labels/'\n",
     "IS_PROTOTYPE = False\n",
     "\n",
     "FP_MODIFIER = 10 # Tuning parameter, use 1 if unsure\n",
@@ -119,13 +145,26 @@
     "\n",
     "\n",
     "print('DEFINITIONS OK')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEFINITIONS OK\n"
+     ]
+    }
+   ],
+   "execution_count": 24
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:51:23.610037Z",
+     "start_time": "2024-12-11T16:51:23.582027Z"
+    }
+   },
    "source": [
     "# Functions\n",
     "\n",
@@ -288,7 +327,7 @@
     "        else:\n",
     "            fname = 'test.txt'\n",
     "        \n",
-    "#         print(path + fname)\n",
+    "        print(path + fname)\n",
     "        self.names = read_csv(path + fname).columns\n",
     "        self.n_imgs = self.names.shape[0]\n",
     "        \n",
@@ -411,20 +450,38 @@
     "\n",
     "\n",
     "print('UTILS OK')\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UTILS OK\n"
+     ]
+    }
+   ],
+   "execution_count": 25
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:45:52.632819Z",
+     "start_time": "2024-12-11T16:45:52.630946Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T16:51:36.712298Z",
+     "start_time": "2024-12-11T16:51:36.643232Z"
+    }
+   },
    "source": [
     "# Dataset\n",
     "\n",
@@ -447,7 +504,38 @@
     "\n",
     "\n",
     "print('DATASETS OK')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/phil/datasets/Onera/Onera Satellite Change Detection dataset - Train Labels/train.txt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/14 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/phil/datasets/Onera/Onera Satellite Change Detection dataset - Train Labels/aguasclaras/imgs_1/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[26], line 12\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m      7\u001B[0m     data_transform \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m---> 12\u001B[0m train_dataset \u001B[38;5;241m=\u001B[39m \u001B[43mChangeDetectionDataset\u001B[49m\u001B[43m(\u001B[49m\u001B[43mPATH_TO_DATASET\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtrain\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mstride\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mTRAIN_STRIDE\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtransform\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdata_transform\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     13\u001B[0m weights \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mFloatTensor(train_dataset\u001B[38;5;241m.\u001B[39mweights)\u001B[38;5;241m.\u001B[39mcuda()\n\u001B[1;32m     14\u001B[0m \u001B[38;5;28mprint\u001B[39m(weights)\n",
+      "Cell \u001B[0;32mIn[25], line 179\u001B[0m, in \u001B[0;36mChangeDetectionDataset.__init__\u001B[0;34m(self, path, train, patch_side, stride, use_all_bands, transform)\u001B[0m\n\u001B[1;32m    176\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mpatch_coords \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m    177\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m im_name \u001B[38;5;129;01min\u001B[39;00m tqdm(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mnames):\n\u001B[1;32m    178\u001B[0m     \u001B[38;5;66;03m# load and store each image\u001B[39;00m\n\u001B[0;32m--> 179\u001B[0m     I1, I2, cm \u001B[38;5;241m=\u001B[39m \u001B[43mread_sentinel_img_trio\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpath\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mim_name\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    180\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimgs_1[im_name] \u001B[38;5;241m=\u001B[39m reshape_for_torch(I1)\n\u001B[1;32m    181\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimgs_2[im_name] \u001B[38;5;241m=\u001B[39m reshape_for_torch(I2)\n",
+      "Cell \u001B[0;32mIn[25], line 111\u001B[0m, in \u001B[0;36mread_sentinel_img_trio\u001B[0;34m(path)\u001B[0m\n\u001B[1;32m    109\u001B[0m     I2 \u001B[38;5;241m=\u001B[39m read_sentinel_img_leq20(path \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/imgs_2/\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m    110\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m TYPE \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m3\u001B[39m:\n\u001B[0;32m--> 111\u001B[0m     I1 \u001B[38;5;241m=\u001B[39m \u001B[43mread_sentinel_img_leq60\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m/imgs_1/\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m    112\u001B[0m     I2 \u001B[38;5;241m=\u001B[39m read_sentinel_img_leq60(path \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/imgs_2/\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m    114\u001B[0m cm \u001B[38;5;241m=\u001B[39m io\u001B[38;5;241m.\u001B[39mimread(path \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/cm/cm.png\u001B[39m\u001B[38;5;124m'\u001B[39m, as_gray\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m) \u001B[38;5;241m!=\u001B[39m \u001B[38;5;241m0\u001B[39m\n",
+      "Cell \u001B[0;32mIn[25], line 72\u001B[0m, in \u001B[0;36mread_sentinel_img_leq60\u001B[0;34m(path)\u001B[0m\n\u001B[1;32m     70\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mread_sentinel_img_leq60\u001B[39m(path):\n\u001B[1;32m     71\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Read cropped Sentinel-2 image: all bands.\"\"\"\u001B[39;00m\n\u001B[0;32m---> 72\u001B[0m     im_name \u001B[38;5;241m=\u001B[39m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlistdir\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m)\u001B[49m[\u001B[38;5;241m0\u001B[39m][:\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m7\u001B[39m]\n\u001B[1;32m     74\u001B[0m     r \u001B[38;5;241m=\u001B[39m io\u001B[38;5;241m.\u001B[39mimread(path \u001B[38;5;241m+\u001B[39m im_name \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mB04.tif\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     75\u001B[0m     s \u001B[38;5;241m=\u001B[39m r\u001B[38;5;241m.\u001B[39mshape\n",
+      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '/home/phil/datasets/Onera/Onera Satellite Change Detection dataset - Train Labels/aguasclaras/imgs_1/'"
+     ]
+    }
+   ],
+   "execution_count": 26
   },
   {
    "cell_type": "code",
